# motospirit

./: .gitignore  README.md  install.sh  update.sh
config/: asplashscreen  config.txt  rc.local  xinitrc
sbin/: candump.sh  canplayer.sh  generate_fb_splashs.sh  init_can.sh  init_rtc.sh  init_vcan.sh  motospirit.sh  spam_canbus.sh  vcandump.sh
src/: MainWindow.py  MainWindow.ui  Makefile  PDOMapping.py  mspanel.py
src/speedmeter/: CMakeLists.txt  __init__.py  speedmeter.c  speedmeter.h  speedmeter.kdev4  speedmeter.py  speedmeter_test.c
